Deploy finished?